--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,10 +17,10 @@ import ArrowDown from '../components/icons/ArrowDown.astro';
 	<!-- <HelpButton /> -->
 	<section class="min-h-[calc(100vh-64px)] flex flex-col py-3 px-2 xs:p-6 sm:py-20 text-base-content text-center max-w-4xl mx-auto">
 		<div class="flex flex-col flex-shrink-0">
-			<h1 class="text-xl xs:text-2xl sm:text-4xl text-primary font-bold leading-tight mb-4 ">
+			<h1 class="text-xl xs:text-2xl sm:text-4xl font-bold leading-tight mb-4 ">
 						How Much Does A Water Heater Replacement Cost in West Michigan?
 						<br/>
-						<p class="text-secondary">Get A Quote in Seconds</span>
+						<p class="text-primary">Get A Quote in Seconds</span>
 					</h1>
 					<p class="text-sm xs:text-md sm:text-2xl leading-tight mb-8 sm:max-w-xl max-w-3xl mx-auto">
 						No sales pitch. No pressure. Just real, transparent pricing from us—a family owned and operated contractor serving West Michigan for over 25 years.
