--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,13 +10,15 @@
 @plugin "daisyui/theme" {
     name: "light";
     default: true;
-    --color-primary: hsl(195, 100%, 25%);
+    --color-primary: #10509B;
+        /* --color-primary: hsl(195, 100%, 25%); */
     --color-secondary: #DC5435;
 }
 @plugin "daisyui/theme" {
     name: "dark";
     default: false;
-    --color-primary: hsl(195, 100%, 25%);
+    --color-primary: #10509B;
+        /* --color-primary: hsl(195, 100%, 25%); */
     --color-secondary: hsl(30, 100%, 35%);
 }
 
