--- a/src/components/icons/ArrowDown.astro
+++ b/src/components/icons/ArrowDown.astro
@@ -2,7 +2,7 @@
 const { class: className = '', ...props } = Astro.props;
 ---
 <svg
-    class={` ${className}`}
+    class={`my-1 ${className}`}
     xmlns="http://www.w3.org/2000/svg"
     width="24"
     height="24"
@@ -15,7 +15,7 @@ const { class: className = '', ...props } = Astro.props;
     {...props}
 >
     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-    <path d="M12 5l0 14" />
-    <path d="M18 13l-6 6" />
-    <path d="M6 13l6 6" />
+    <path d="M12 2l0 18" />
+    <path d="M18 15l-6 8" />
+    <path d="M6 15l6 8" />
 </svg>
