update questionnaire flow, add icons

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -14,7 +14,7 @@ import fullLogo from '../assets/images/logo-full-whrc.png';
                     alt="Water Heater Replacement Company of Grand Rapids Logo"
                     class="h-12 " />
         </a> -->
-        <a class="navbar-start btn btn-ghost w-fit h-[100%]"
+        <a class="px-0 navbar-start w-[160%] btn btn-ghost z-51"
             aria-label="Home | Water Heater Replacement Company of Grand Rapids"
             href="/">
             <img src={fullLogo.src}
@@ -49,12 +49,23 @@ import fullLogo from '../assets/images/logo-full-whrc.png';
             </ul>
         </div>
         <!-- CTA -->
-        <div class="hidden lg:block">
+        <!-- <div class="hidden lg:block">
             <a aria-label="Book Now" href="/pricing/" class="btn btn-primary w-36 h-12"><svg  xmlns="http://www.w3.org/2000/svg"  width={24}  height={24}  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width={2}  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10.5 21h-4.5a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v3" /><path d="M16 3v4" /><path d="M8 3v4" /><path d="M4 11h10" /><path d="M18 18m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" /><path d="M18 16.5v1.5l.5 .5" /></svg>Book Now</a>
-        </div>
+        </div> -->
+         <a class="mx-4 lg:mr-4 font-semibold w-7 h-7 flex items-center justify-center rounded-sm text-primary"
+        href=`tel:5558675309`
+        aria-label=`Click to call the Water Heater Replacement Company of Grand Rapids at 555-867-5309`>
+        <svg class="w-8 h-8 fill-current"
+            viewBox="3 3 18 18"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="m17.38 10.79-2.2-2.2c-.28-.28-.36-.67-.25-1.02.37-1.12.57-2.32.57-3.57 0-.55.45-1 1-1H20c.55 0 1 .45 1 1 0 9.39-7.61 17-17 17-.55 0-1-.45-1-1v-3.49c0-.55.45-1 1-1 1.24 0 2.45-.2 3.57-.57.35-.12.75-.03 1.02.24l2.2 2.2c2.83-1.45 5.15-3.76 6.59-6.59z"></path>
+        </svg>
+    </a>
     </div>
 
     <!-- mobile menu -->
+     <!-- phone icon -->
+
     <div class="dropdown">
         <div aria-label="dropdown button" tabindex="0" role="button" class="btn btn-ghost lg:hidden">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -91,9 +102,9 @@ import fullLogo from '../assets/images/logo-full-whrc.png';
                     </li>
                 </ul>
             </li>
-            <div class="mt-2 lg:hidden w-full">
-                <a aria-label="Book Now" href="/pricing/" class="btn btn-primary h-fit"><svg  xmlns="http://www.w3.org/2000/svg"  width={24}  height={24}  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width={2}  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10.5 21h-4.5a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v3" /><path d="M16 3v4" /><path d="M8 3v4" /><path d="M4 11h10" /><path d="M18 18m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" /><path d="M18 16.5v1.5l.5 .5" /></svg>Schedule Virtual Estimate</a>
-            </div>
+            <!-- <div class="mt-2 lg:hidden w-full">
+                <a aria-label="Book Now" href="/pricing/" class="btn btn-primary h-fit"><svg  xmlns="http://www.w3.org/2000/svg"  width={24}  height={24}  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width={2}  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10.5 21h-4.5a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v3" /><path d="M16 3v4" /><path d="M8 3v4" /><path d="M4 11h10" /><path d="M18 18m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" /><path d="M18 16.5v1.5l.5 .5" /></svg>Book Now</a>
+            </div> -->
         </ul>
     </div>
 
