--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
 import Prices from '../components/Pricing.astro';
 ---
 
-<Layout>
+<BaseLayout>
     <Prices />
-</Layout>
+</BaseLayout>
