--- a/src/pages/products/tank-water-heaters.astro
+++ b/src/pages/products/tank-water-heaters.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from "../../layouts/Layout.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
 import Cta from "../../components/Cta.astro";
 ---
 
-<Layout >
+<BaseLayout >
     <Cta />
-</Layout>
+</BaseLayout>
