--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,12 +5,13 @@ import ArrowDown from './icons/ArrowDown.astro';
 ---
 
 <section class=" flex flex-col xs:my-6 sm:pb-20 text-base-content text-center max-w-5xl mx-auto">
-    <div id="hero-section" class="p-4 bg-base-200 flex flex-col flex-shrink-0 rounded-lg">
+    <div id="hero-section" class="p-4 bg-base-200 flex flex-col flex-shrink-0 rounded-lg shadow-md">
         <h1 class="text-xl xs:text-2xl sm:text-4xl font-bold leading-tight mb-4 ">
             Get A Water Heater Replacement Quote in <span class="font-bold text-primary">Seconds</span>
         </h1>
         <p class="text-sm xs:text-md sm:text-2xl leading-tight mb-6 sm:max-w-xl max-w-3xl mx-auto">
-            Clear pricing. Straightforward advice. Serving West Michigan for over 25 years.
+            Clear pricing. Straightforward advice.
+            <br> Serving West Michigan for over 25 years.
         </p>
         <a href="tel:6165551234" class="btn btn-primary text-lg text-white py-2 w-64 max-w-xs mx-auto mb-4">
             <svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round">
@@ -34,7 +35,7 @@ import ArrowDown from './icons/ArrowDown.astro';
 
     </div>
 </section>
-<section class="px-4 xs:px-6 sm:px-8 pt-4 sm:pt-12 pb-8 text-base-content text-center">
+<section class="p-4 sm:px-8 sm:pt-12 pb-8 text-base-content text-center">
     <div id="instant-quote" class="mx-auto max-w-5xl">
         <FindWaterHeaterQuiz  client:only />
     </div>
