--- a/src/components/HowItWorks.astro
+++ b/src/components/HowItWorks.astro
@@ -1,34 +1,35 @@
 ---
 import ArrowDownIcon from './icons/ArrowDown.astro';
+import PriceReceipt from './icons/PriceReceipt.astro';
 import UserCheck from './icons/UserCheck.astro';
 import MagnifyingGlass from './icons/MagnifyingGlass.astro';
 ---
-<section id="how-it-works" class="py-20 px-6 bg-base-300 text-base-content text-center">
+<section id="how-it-works" class="py-20 px-6 text-base-content text-center">
 	<div class="max-w-4xl mx-auto">
 		<h2 class="text-4xl sm:text-5xl font-bold ">How It Works</h2>
 		<h3 class="text-2xl sm:text-3xl mb-12">4 Easy Steps</h3>
 		<div class="grid gap-0 text-left">
-			<div class="card bg-base-200 p-6">
+			<div class="card bg-base-200 border-1 border-base-300 p-6">
 				<h4 class="text-3xl font-bold text-primary mb-4">Step 1</h4>
 				<h5 class="text-xl font-semibold mb-2">Tell Us About Your Setup</h5>
-				<p class="mb-2">Answer simple questions about your current water heater, fuel type, and hot water needs.</p>
+				<p class="mb-2">Answer simple questions about your current water heater and hot water needs.</p>
                 <p>We don’t store your answers — it’s just to help guide your match.</p>
 			</div>
             <ArrowDownIcon class="h-8 w-full text-primary" />
-			<div class="card bg-base-200 p-6">
+			<div class="card bg-base-200 border-1 border-base-300 p-6">
 				<h4 class="text-3xl font-bold text-primary mb-4">Step 2</h4>
 				<h5 class="text-xl font-semibold mb-2">Get Matched to a Replacement</h5>
 				<p>We’ll recommend the best-fit model for your home — along with a clear price range (like $1,475–$1,900) so you know exactly what to expect.</p>
 			</div>
             <ArrowDownIcon class="h-8 w-full text-primary" />
-			<div class="card bg-base-200 p-6">
+			<div class="card bg-base-200 border-1 border-base-300 p-6">
                 <h4 class="text-3xl font-bold text-primary mb-4">Step 3</h4>
                 <h5 class="text-xl font-semibold mb-2">Confirm Your Price with a Short Video Call <span class="text-xl font-normal">(optional, but required for a final quote)</span></h5>
 				<p class="mb-2">We just need a quick look at your current water heater (venting, gas, water, and electrical) to confirm your final price (like $1,625). We’ll also answer any questions you have.
                 <p><span class="font-bold">NOTE: </span>This is not a sales pitch. No pressure. No upsells.</p>
 			</div>
             <ArrowDownIcon class="h-8 w-full text-primary" />
-			<div class="card bg-base-200 p-6">
+			<div class="card bg-base-200 border-1 border-base-300 p-6">
 				<h4 class="text-3xl font-bold text-primary mb-4">Step 4</h4>
 				<h5 class="text-xl font-semibold mb-2">Book Your Installation</h5>
 				<p class="mb-2">Book online or give us a call — most installs happen the next day.</p>
@@ -37,8 +38,8 @@ import MagnifyingGlass from './icons/MagnifyingGlass.astro';
             <ArrowDownIcon class="h-8 w-full animate-bounce text-primary" />
 		</div>
             <a href="/" class="btn btn-primary text-lg w-full max-w-xs py-2 mx-auto">
-                <UserCheck />
-                <p class="w-full">Get My Instant Estimate</p>
+                <PriceReceipt />
+                <p class="w-full">Get My Instant Quote</p>
             </a>
 	</div>
 </section>
