--- a/src/layouts/InstantQuoteLayout.astro
+++ b/src/layouts/InstantQuoteLayout.astro
@@ -77,7 +77,7 @@ const metadata = {
 
 
 	<body>
-		<Navigation />
+		<Navigation showNavigation={false}/>
 		<slot />
 		<!-- <Footer /> -->
 	</body>
