--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,58 +4,49 @@ import ArrowDown from './icons/ArrowDown.astro';
 import tech1 from '../assets/images/whrc-tech1.png';
 import tech2 from '../assets/images/whrc-tech2.png';
 import PriceReceipt from './icons/PriceReceipt.astro';
+import Phone from './icons/Phone.astro';
+import CalendarClock from './icons/CalendarClock.astro';
 
 ---
 <section
-    class="relative bg-cover bg-center text-base-content"
+    class="xs:h-[900px] relative xs:mb-20 bg-cover bg-fixed text-base-content"
     style={`background-image: url(${tech2.src}); min-height: 100vh;`}
 >
-<div class="absolute inset-0 bg-white/80 sm:bg-white/80">
-    <div class=" flex flex-col xs:my-6 sm:pb-20 text-base-content text-center max-w-5xl mx-auto">
-        <div id="hero-section" class="p-4 flex flex-col flex-shrink-0 rounded-lg">
-            <h1 class="text-xl xs:text-2xl sm:text-4xl font-bold leading-tight mb-4 ">
-                Get A Water Heater Replacement Quote in <span class="font-bold text-primary">Seconds</span>
-            </h1>
-            <p class="text-sm xs:text-md sm:text-2xl leading-tight mb-6 sm:max-w-xl max-w-3xl mx-auto">
-                Clear pricing. Straightforward advice.
-                <br> Serving West Michigan for over 25 years.
-            </p>
-            <a href="tel:6165551234" class="btn btn-primary text-lg text-white py-2 w-64 max-w-xs mx-auto mb-4">
-                <svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                    <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
-                </svg>
-                <p>Talk to a Pro</p>
-            </a>
-            <a href="tel:6165551234" class="btn btn-primary text-lg text-white py-2 w-64 max-w-xs mx-auto mb-4">
-                <PriceReceipt />
-                <p>Instant Quote</p>
-            </a>
-            <a aria-label="Book Now" href="/pricing/" class="btn btn-outline text-lg bg-white text-black py-2 w-64 max-w-xs mx-auto mb-4 shadow-sm">
-                <svg  xmlns="http://www.w3.org/2000/svg"  width={24}  height={24}  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width={2}  stroke-linecap="round"  stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                    <path d="M10.5 21h-4.5a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v3" />
-                    <path d="M16 3v4" />
-                    <path d="M8 3v4" />
-                    <path d="M4 11h10" />
-                    <path d="M18 18m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
-                    <path d="M18 16.5v1.5l.5 .5" />
-                </svg>
-                <p>Book Online</p>
-            </a>
+    <div class="absolute inset-0 bg-white/85 sm:bg-white/85">
+        <div class=" flex flex-col xs:my-6 md:py-20 text-base-content text-center max-w-5xl mx-auto">
+            <div id="hero-section" class="p-4 flex flex-col flex-shrink-0 rounded-lg">
+                <h1 class="text-xl xs:text-2xl sm:text-4xl font-bold leading-tight mb-4 ">
+                    Get A Water Heater Replacement Quote in <span class="font-bold text-primary">Seconds</span>
+                </h1>
+                <p class="text-sm xs:text-md sm:text-2xl leading-tight mb-6 sm:max-w-xl max-w-3xl mx-auto">
+                    Clear pricing. Straightforward advice.
+                    <br> Serving West Michigan for over 25 years.
+                </p>
+                <a href="tel:6165551234" class="btn btn-primary text-lg text-white py-2 w-64 max-w-xs mx-auto mb-4">
+                    <Phone />
+                    <p>Talk to a Pro</p>
+                </a>
+                <a href="/instant-quote/" class="btn btn-primary text-lg text-white py-2 w-64 max-w-xs mx-auto mb-4">
+                    <PriceReceipt />
+                    <p>Instant Quote</p>
+                </a>
+                <a aria-label="Book Now" href="/pricing/" class="btn btn-outline text-lg bg-white text-black py-2 w-64 max-w-xs mx-auto mb-4 shadow-sm">
+                    <CalendarClock />
+                    <p>Book Online</p>
+                </a>
+            </div>
         </div>
-    </div>
-    <div class="p-4 sm:px-8 sm:pt-12 pb-8 text-base-content text-center">
-        <div id="instant-quote" class="mx-auto max-w-5xl">
-            <FindWaterHeaterQuiz  client:only />
-        </div>
+        <div class="p-4 sm:px-8 sm:pt-12 pb-8 text-base-content text-center">
+            <div id="instant-quote" class="mx-auto max-w-5xl">
+                <FindWaterHeaterQuiz  client:only />
+            </div>
 
-        <!-- <p class="mt-6 text-sm text-gray-500 max-w-sm mx-auto">
-            Prefer to learn more first?
-        </p> -->
-        <p class="mt-6 text-sm text-gray-500 max-w-sm mx-auto">
-            Scroll down to see how it works.
-        </p>
-    </div>
+            <!-- <p class="mt-6 text-sm text-gray-500 max-w-sm mx-auto">
+                Prefer to learn more first?
+            </p> -->
+            <!-- <p class="mt-6 text-sm text-gray-500 max-w-sm mx-auto">
+                Scroll down to see how it works.
+            </p> -->
+        </div>
     </div>
 </section>
