--- a/src/components/HowItWorks.astro
+++ b/src/components/HowItWorks.astro
@@ -4,7 +4,7 @@ import PriceReceipt from './icons/PriceReceipt.astro';
 import UserCheck from './icons/UserCheck.astro';
 import MagnifyingGlass from './icons/MagnifyingGlass.astro';
 ---
-<section id="how-it-works" class="py-20 px-6 text-base-content text-center">
+<section id="how-it-works" class="xs:-mt-20 py-20 px-6 text-base-content text-center">
 	<div class="max-w-4xl mx-auto">
 		<h2 class="text-4xl sm:text-5xl font-bold ">How It Works</h2>
 		<h3 class="text-2xl sm:text-3xl mb-12">4 Easy Steps</h3>
@@ -24,9 +24,10 @@ import MagnifyingGlass from './icons/MagnifyingGlass.astro';
             <ArrowDownIcon class="h-8 w-full text-primary" />
 			<div class="card bg-base-200 border-1 border-base-300 p-6">
                 <h4 class="text-3xl font-bold text-primary mb-4">Step 3</h4>
-                <h5 class="text-xl font-semibold mb-2">Confirm Your Price with a Short Video Call <span class="text-xl font-normal">(optional, but required for a final quote)</span></h5>
-				<p class="mb-2">We just need a quick look at your current water heater (venting, gas, water, and electrical) to confirm your final price (like $1,625). We’ll also answer any questions you have.
-                <p><span class="font-bold">NOTE: </span>This is not a sales pitch. No pressure. No upsells.</p>
+                <h5 class="text-xl font-semibold mb-2">Confirm Your Price with a Photo or Quick Video Call</h5>
+				<p class="mb-2">To finalize your quote, we just need a quick look at your current water heater setup — including venting, gas, water, and electrical connections. You can either send us photos or hop on a short video call — whichever is easiest for you.
+                <span class="font-bold">NOTE: </span>No pressure. No sales pitch. Just a quick check to confirm details and answer your questions.
+			</p>
 			</div>
             <ArrowDownIcon class="h-8 w-full text-primary" />
 			<div class="card bg-base-200 border-1 border-base-300 p-6">
