--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,10 +9,10 @@ import CalendarClock from './icons/CalendarClock.astro';
 
 ---
 <section
-    class="xs:h-[900px] relative xs:mb-20 bg-cover bg-fixed text-base-content"
+    class="h-[800px] sm:h-[800px] relative xs:mb-20 bg-cover bg-fixed text-base-content"
     style={`background-image: url(${tech2.src}); min-height: 100vh;`}
 >
-    <div class="absolute inset-0 bg-white/85 sm:bg-white/85">
+    <div class="h-full absolute inset-0 bg-white/85 sm:bg-white/85">
         <div class=" flex flex-col xs:my-6 md:py-20 text-base-content text-center max-w-5xl mx-auto">
             <div id="hero-section" class="p-4 flex flex-col flex-shrink-0 rounded-lg">
                 <h1 class="text-xl xs:text-2xl sm:text-4xl font-bold leading-tight mb-4 ">
@@ -36,7 +36,7 @@ import CalendarClock from './icons/CalendarClock.astro';
                 </a>
             </div>
         </div>
-        <div class="p-4 sm:px-8 sm:pt-12 pb-8 text-base-content text-center">
+        <div class="p-4 sm:px-8 sm:py-0 text-base-content text-center">
             <div id="instant-quote" class="mx-auto max-w-5xl">
                 <FindWaterHeaterQuiz  client:only />
             </div>
