--- a/src/components/HowItWorks.astro
+++ b/src/components/HowItWorks.astro
@@ -4,7 +4,7 @@ import PriceReceipt from './icons/PriceReceipt.astro';
 import UserCheck from './icons/UserCheck.astro';
 import MagnifyingGlass from './icons/MagnifyingGlass.astro';
 ---
-<section id="how-it-works" class="xs:-mt-20 py-20 px-6 text-base-content text-center">
+<section id="how-it-works" class="py-20 px-6 text-base-content text-center">
 	<div class="max-w-4xl mx-auto">
 		<h2 class="text-4xl sm:text-5xl font-bold ">How It Works</h2>
 		<h3 class="text-2xl sm:text-3xl mb-12">4 Easy Steps</h3>
