move hero bg images to public

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,8 +11,8 @@ import CalendarClock from './icons/CalendarClock.astro';
 <section
     class="
         h-[900px] sm:h-[900px] relative xs:mb-20
-        bg-[url('/src/assets/images/whrc-tech2-edit1.png')]
-        sm:bg-[url('/src/assets/images/whrc-tech2-landscape.png')]
+        bg-[url('/images/heroBgMobile.png')]
+        sm:bg-[url('/images/heroBgDesktop.png')]
         bg-cover bg-fixed bg-left text-base-content
     "
     style="min-height: 100vh;"
