--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,8 +1,5 @@
 ---
 import FindWaterHeaterQuiz from './FindWaterHeaterQuiz';
-import tech2 from '../assets/images/whrc-tech2.png';
-import techMobile from '../assets/images/whrc-tech2-edit1.png'
-import techDesktop from '../assets/images/whrc-tech2-landscape.png'
 import PriceReceipt from './icons/PriceReceipt.astro';
 import Phone from './icons/Phone.astro';
 import CalendarClock from './icons/CalendarClock.astro';
@@ -13,7 +10,7 @@ import CalendarClock from './icons/CalendarClock.astro';
         h-[900px] sm:h-[900px] relative xs:mb-20
         bg-[url('/images/heroBgMobile.png')]
         sm:bg-[url('/images/heroBgDesktop.png')]
-        bg-cover bg-fixed bg-left text-base-content
+        bg-contain bg-fixed bg-left text-base-content
     "
     style="min-height: 100vh;"
 >
