--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,9 +7,10 @@ import CalendarClock from './icons/CalendarClock.astro';
 ---
 <section
     class="
-        h-[900px] sm:h-[900px] relative xs:mb-20
+        h-[600px] sm:h-[900px] relative xs:mb-20
         bg-[url('/images/heroBgMobile.png')]
         sm:bg-[url('/images/heroBgDesktop.png')]
+        bg-no-repeat
         bg-contain bg-fixed bg-left text-base-content
     "
     style="min-height: 100vh;"
