upload optimized images

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,8 +8,8 @@ import CalendarClock from './icons/CalendarClock.astro';
 <section
     class="
         h-[900px] sm:h-[900px] relative xs:mb-20
-        bg-[url('/images/heroBgMobile.png')]
-        sm:bg-[url('/images/heroBgDesktop.png')]
+        bg-[url('/images/heroBgMobile.webp')]
+        sm:bg-[url('/images/heroBgDesktop.webp')]
         bg-cover bg-fixed bg-left text-base-content
     "
     style="min-height: 100vh;"
