--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ import CalendarClock from './icons/CalendarClock.astro';
         h-[900px] sm:h-[900px] relative xs:mb-20
         bg-[url('/images/heroBgMobile.webp')]
         sm:bg-[url('/images/heroBgDesktop.webp')]
-        bg-contain bg-no-repeat bg-fixed bg-left text-base-content
+        bg-cover bg-fixed bg-left text-base-content
     "
     style="min-height: 100vh;"
 >
