--- a/src/components/icons/ArrowDown.astro
+++ b/src/components/icons/ArrowDown.astro
@@ -2,7 +2,7 @@
 const { class: className = '', ...props } = Astro.props;
 ---
 <svg
-    class={`my-1 ${className}`}
+    class={`${className}`}
     xmlns="http://www.w3.org/2000/svg"
     width="24"
     height="24"
