--- a/src/components/icons/CalendarClock.astro
+++ b/src/components/icons/CalendarClock.astro
@@ -2,6 +2,7 @@
 const { class: className = '', ...props } = Astro.props;
 ---
 <svg
+    class={`${className}`}
     xmlns="http://www.w3.org/2000/svg"
     width={24}
     height={24}
@@ -11,7 +12,7 @@ const { class: className = '', ...props } = Astro.props;
     stroke-width={2}
     stroke-linecap="round"
     stroke-linejoin="round"
-    class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock mr-2"
+    {...props}
 >
     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
     <path d="M10.5 21h-4.5a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v3" />
