--- a/src/components/icons/MagnifyingGlass.astro
+++ b/src/components/icons/MagnifyingGlass.astro
@@ -12,6 +12,7 @@ const { class: className = '', ...props } = Astro.props;
     stroke-width={2}
     stroke-linecap="round"
     stroke-linejoin="round"
+    {...props}
 >
     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
     <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" />
