--- a/src/components/icons/UserCheck.astro
+++ b/src/components/icons/UserCheck.astro
@@ -2,7 +2,7 @@
 const { class: className = '', ...props } = Astro.props;
 ---
 <svg
-    class={` ${className}`}
+    class={`${className}`}
     xmlns="http://www.w3.org/2000/svg"
     width="24"
     height="24"
@@ -12,7 +12,7 @@ const { class: className = '', ...props } = Astro.props;
     stroke-width="2"
     stroke-linecap="round"
     stroke-linejoin="round"
-    class="icon icon-tabler icons-tabler-outline icon-tabler-user-check"
+    {...props}
     >
     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
     <path d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0" />
