--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -17,22 +17,38 @@ import CalendarClock from './icons/CalendarClock.astro';
     <div class="h-full absolute inset-0 bg-white/85 sm:bg-white/85">
         <div class=" flex flex-col xs:my-6 md:py-20 text-base-content text-center max-w-5xl mx-auto">
             <div id="hero-section" class="p-4 flex flex-col flex-shrink-0 rounded-lg">
-                <h1 class="text-xl xs:text-2xl sm:text-4xl font-bold leading-tight mb-4 ">
-                    Get A Water Heater Replacement Quote in <span class="font-bold text-primary">Seconds</span>
+                <p class="text-xl xs:text-2xl sm:text-4xl font-bold leading-tight mb-4">
+                    <!-- Get A Water Heater Replacement Quote in <span class="font-bold text-primary">Seconds</span> -->
+                    <!-- West Michigan's Answer to <span class="font-bold text-primary">"Why Is Replacing a Water Heater So Complicated?"</span> -->
+                    So How Much Does A Water Heater Replacement Cost?
+                </p>
+                <p class=" text-xl xs:text-2xl sm:text-3xl font-bold leading-tight">
+                    Competitors: "<span class="text-secondary">It depends...</span>"
+                </p>
+                <p class="text-xl xs:text-2xl sm:text-3xl font-bold leading-tight mb-4">
+                    Us: "<span class="text-primary">Here’s your price.</span>"
+                </p>
+                </p>
+                <h1 class="text-sm xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto">
+                    Get A Water Heater Replacement Quote in Seconds.
                 </h1>
-                <p class="text-sm xs:text-md sm:text-2xl leading-tight mb-6 sm:max-w-xl max-w-3xl mx-auto">
-                    Clear pricing. Straightforward advice.
+                <p class="text-sm xs:text-md sm:text-2xl leading-tight mb-6 sm:max-w-2xl max-w-3xl mx-auto">
+                    No sales games. Just clear pricing and straightforward advice.
                     <br> Serving West Michigan for over 25 years.
                 </p>
+                <!-- <p class="text-sm xs:text-md sm:text-2xl leading-tight mb-6 sm:max-w-xl max-w-3xl mx-auto">
+                    Clear pricing. Straightforward advice.
+                    <br> Serving West Michigan for over 25 years.
+                </p> -->
                 <a href="tel:6165551234" class="btn btn-primary text-lg text-white py-2 w-64 max-w-xs mx-auto mb-4">
                     <Phone />
                     <p>Talk to a Pro</p>
                 </a>
-                <a href="/instant-quote/" class="btn btn-primary text-lg text-white py-2 w-64 max-w-xs mx-auto mb-4">
+                <a href="/instant-quote/" class="btn btn-secondary text-lg text-white py-2 w-64 max-w-xs mx-auto mb-4">
                     <PriceReceipt />
                     <p>Instant Quote</p>
                 </a>
-                <a aria-label="Book Now" href="/pricing/" class="btn btn-outline text-lg bg-white text-black py-2 w-64 max-w-xs mx-auto mb-4 shadow-sm">
+                <a aria-label="Book Now" href="/pricing/" class="btn btn-outline text-lg bg-white/50 text-black py-2 w-64 max-w-xs mx-auto mb-4 shadow-sm">
                     <CalendarClock />
                     <p>Book Online</p>
                 </a>
