--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,8 +8,8 @@ const { showNavigation = true } = Astro.props;
 ---
 
 <div class="fixed top-0 left-0 w-full z-50 navbar bg-base-100 shadow-sm">
-    <div class="navbar-start w-100">
-        <a class="px-0 w-full navbar-start btn btn-ghost z-51"
+    <div class="sm:navbar-start w-100">
+        <a class="px-0 w-fit navbar-start btn btn-ghost z-51"
             aria-label="Home | Water Heater Replacement Company of Grand Rapids"
             href="/">
             <img src={fullLogo.src}
