--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,7 +7,7 @@ import CalendarClock from './icons/CalendarClock.astro';
 ---
 <section
     class="
-        h-[900px] sm:h-[900px] relative xs:mb-20
+        relative xs:mb-20
         bg-[url('/images/heroBgMobile.webp')]
         sm:bg-[url('/images/heroBgDesktop.webp')]
         bg-cover bg-no-repeat sm:bg-cover bg-fixed bg-top-left text-base-content
