--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,14 +7,12 @@ import CalendarClock from './icons/CalendarClock.astro';
 ---
 <section
     class="
-        relative xs:mb-20
         bg-[url('/images/heroBgMobile.webp')]
         sm:bg-[url('/images/heroBgDesktop.webp')]
-        bg-cover bg-no-repeat sm:bg-cover bg-fixed bg-top-left text-base-content
+        bg-cover bg-fixed bg-left text-base-content
     "
-    style="min-height: 100vh;"
 >
-    <div class="h-full absolute inset-0 bg-white/85 sm:bg-white/85">
+    <div class="h-full bg-white/90">
         <div class=" flex flex-col xs:my-6 md:py-20 text-base-content text-center max-w-5xl mx-auto">
             <div id="hero-section" class="p-4 flex flex-col flex-shrink-0 rounded-lg">
                 <p class="text-xl xs:text-2xl sm:text-4xl font-bold leading-tight mb-4">
