try to remove fixed bg on mobile

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,11 +6,15 @@ import CalendarClock from './icons/CalendarClock.astro';
 
 ---
 <section
-    class="lg:h-full
-        bg-[url('/images/heroBgMobile.webp')]
-        sm:bg-[url('/images/heroBgDesktop.webp')]
-        bg-cover bg-fixed bg-left text-base-content
-    "
+    class="
+		bg-[url('/images/heroBgMobile.webp')]
+		sm:bg-[url('/images/heroBgDesktop.webp')]
+		bg-cover
+		bg-left
+		bg-no-repeat
+		text-base-content
+		sm:bg-fixed
+	"
 >
     <div class="h-full bg-white/90 pb-6">
         <div class="
