FINALLY fixed mobile hero img. bg-fixed!

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,6 +14,7 @@ import CalendarClock from './icons/CalendarClock.astro';
 		bg-no-repeat
 		text-base-content
 		sm:bg-fixed
+        lg:h-full
 	"
 >
     <div class="h-full bg-white/90 pb-6">
